Fix mentors grid on mobile devices

--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -1,7 +1,7 @@
 
 .card {
   width: 100%;
-  padding: 15px;
+  /*padding: 15px;*/
   box-sizing: border-box;
   cursor: pointer;
 }
